--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 			<div id="main">
 
 				<footer class="major container 75%">
-					<h3>Join us in a unique journey</h3>
-					<p>UPC Founders Lab and Hackers@UPC want to offer you the opportunity of entering in the
-					tech world with the best Startups of Barcelona.</p>
+					<h3>Connecting the best developers and computer science students with the most attractive startups</h3>
+					<p>UPC Founders Lab and Hackers@UPC have prepared this awesome event, at informatics faculty of the Polytechnic University of Catalonia (UPC)</p>
 					<ul class="actions">
-						<li><a href="#" class="button">Location</a></li>
+						<li><a href="https://www.google.es/maps/place/FIB+-+Facultat+d'Inform%C3%A0tica+de+Barcelona/@41.3897588,2.1127699,14.5z/data=!4m5!1m2!2m1!1sfib!3m1!1s0x0000000000000000:0xf3ab8ba023c5cd56" class="button">Location</a></li>
 					</ul>
 				</footer>
 
@@ -41,21 +40,21 @@
 						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Startups</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>The most innovative and irruptive startups from Barcelona recruiting the talented and passionate technical students from UPC. Attending the Start-up Fair UPC is an excellent way to get in touch with computer science students and developers.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Pitch Session</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>The startups will have the chance to pitch during 5 minutes to the computer science students explaining the reason why the startup is performing so well and what the career plans are for the tremendously motivated youth.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Virtual Reality</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<p>We will host some Virtual Reality companies so that students will be able to try out the newest VR Products. This will represent the first event actively dedicated to Virtual Reality in Barcelona. This VR event will be placed along with the startups, attracting the top computer science students to the fair.</p>
 						</div>
 					</section>
 				</div>
