fixing sergi's comments

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 			<div id="header">
 				<img class="logo icon fa-paper-plane-o" src="images/logo.png">
 				<h1>Startup Fair 2016</h1>
-				<p>The first student's Startup fair! Connecting talent with high potential startups
-				<br />
-				Join us on May 19th at UPC Campus.</p>
+				<p>
+					STARTUP FAIR is the first business fair for startups held at UPC.
+					<br />
+					We bring together the brightest students and high potential startups to foster networking experiences.
+					<br />
+					Join us on May 19th at UPC Campus
+				</p>
 			</div>
 
 		<!-- Main -->
@@ -40,7 +44,9 @@
 						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Startups</h3>
-							<p>The most innovative and irruptive startups from Barcelona recruiting the talented and passionate technical students from UPC. Attending the Start-up Fair UPC is an excellent way to get in touch with computer science students and developers.</p>
+							<p>
+								The most innovative and irruptive startups from Barcelona will be recruiting talented and passionate technical students from UPC. Attending the Start-up Fair UPC is an excellent way to get in touch with the best computer science students and developers.
+							</p>
 						</div>
 					</section>
 					<section class="feature right">
@@ -58,6 +64,13 @@
 						</div>
 					</section>
 				</div>
+
+                <div class="content">
+                    <ul class="actions">
+                        <li><input type="submit" value="Sponsorship Opportunities Available!" /></li>
+                    </ul>
+                </div>
+
 			</div>
 
 		<!-- Footer -->
@@ -65,10 +78,12 @@
 				<div class="container 75%">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>For further info</h2>
 					</header>
 
-					<p>Do not hesitate to contact us if you have any questions. </p>
+					<p>If you want to receive an email for a formal proposal with our price list or to receive further information
+
+						regarding this event, please send an email and we will get back to you straight away. </p>
 
 					<form method="post" action="#">
 						<div class="row">
@@ -100,6 +115,10 @@
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>-->
+
+					<ul>
+						startupfairupc@gmail.com
+					</ul>
 
 					<ul class="copyright">
 						<li>&copy; BIENE. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
