--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</ul>-->
 
 					<ul>
-						startupfairupc@gmail.com
+						info@startupfairbcn.com
 					</ul>
 
 					<ul class="copyright">
