--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Startup Fair</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,7 +14,6 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-
 		<!-- Header -->
 			<div id="header">
 				<img class="logo icon fa-paper-plane-o" src="images/logo.png">
@@ -41,7 +40,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Startups</h3>
 							<p>
@@ -50,14 +49,14 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Pitch Session</h3>
 							<p>The startups will have the chance to pitch during 5 minutes to the computer science students explaining the reason why the startup is performing so well and what the career plans are for the tremendously motivated youth.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Virtual Reality</h3>
 							<p>We will host some Virtual Reality companies so that students will be able to try out the newest VR Products. This will represent the first event actively dedicated to Virtual Reality in Barcelona. This VR event will be placed along with the startups, attracting the top computer science students to the fair.</p>
@@ -120,6 +119,11 @@
 						info@startupfairbcn.com
 					</ul>
 
+					<div>
+						<p>Proudly organised by:</p>
+						<a href="https://hackersatupc.org/"><img src="images/hackersatupc.png" width="152" height="152"/></a>
+						<a href="http://www.upcfounderslab.com/"><img src="images/transpaLogoUPCFLok.jpg" width="288" height="110"/></a>
+					</div>
 					<ul class="copyright">
 						<li>&copy; BIENE. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
