Add link to pdf file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Virtual Reality</h3>
-							<p>We will host some Virtual Reality companies so that students will be able to try out the newest VR Products. This will represent the first event actively dedicated to Virtual Reality in Barcelona. This VR event will be placed along with the startups, attracting the top computer science students to the fair.</p>
+							<p>We will host some Virtual Reality companies so that students will be able to try out the newest VR Products. This will represent the first event actively dedicated to Virtual Reality in Barcelona. This VR event will be placed along with the startups, attracting the top computer science students to the fair. You can learn more from <a href="static/Information_VRCat_Event.pdf" download>here</a>.</p>
 						</div>
 					</section>
 				</div>
