--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Startup Fair</title>
+		<title>Startup Career Fair UPC & VR EVENT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,7 +17,10 @@
 		<!-- Header -->
 			<div id="header">
 				<img class="logo icon fa-paper-plane-o" src="images/logo.png">
-				<h1>Startup Fair 2016</h1>
+				<h1>Startup Career Fair UPC <br> VR EVENT</h1>
+				<br>
+				<h2 class="subtitle">Thursday 19th May at Campus Nord UPC</h2>
+				<br>
 				<p>
 					STARTUP FAIR is the first career fair for startups held at UPC.
 					<br />
@@ -44,22 +47,41 @@
 						<div class="content">
 							<h3>Startups</h3>
 							<p>
-								The most innovative and irruptive startups from Barcelona will be recruiting talented and passionate technical students from UPC. Attending the Start-up Fair UPC is an excellent way to get in touch with the best computer science students and developers.
+								Are you a Tech Student and are you thinking about your next steps
+								as a professional? Are you a passionate developer or technology geek and curious about
+								how your talents could fit the actual demands in the startup world? If so, you should
+								reserve Thursday, 19th of May in your agenda to attend the Start Up Fair UPC, Barcelona's
+								only fair that connects great Start Ups to UPC Talent. Make valuable connections that
+								will shape your future!<br>
+								The Startup Fair UPC has the objective
+								of bringing opportunities to talented students. You will be able to meet innovative startups,
+								talk with them face to face and to start building your future career path.
+								This event is a great opportunity for you to present your skills or projects to the most interesting founders to show them that you are the talent they are looking for.
+
 							</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<!--<div class="content">
+
+							<p>A small time investment that will leave big impact on your future.</p>
+						</div>-->
+						<a class="image hidephoto"><img src="" alt="" /></a>
 						<div class="content">
-							<h3>Pitch Session</h3>
-							<p>The startups will have the chance to pitch during 5 minutes to the computer science students explaining the reason why the startup is performing so well and what the career plans are for the tremendously motivated youth.</p>
+							<h3>A small time investment that will leave big impact on your future.</h3>
 						</div>
 					</section>
 					<section class="feature left">
 						<a class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Virtual Reality</h3>
-							<p>We will host some Virtual Reality companies so that students will be able to try out the newest VR Products. This will represent the first event actively dedicated to Virtual Reality in Barcelona. This VR event will be placed along with the startups, attracting the top computer science students to the fair. If you want to participate in this awesome and unique event, check out this <a href="static/Information_VRCat_Event.pdf" download>document</a>.</p>
+							<p>
+								We will host some Virtual Reality companies so that students will be able to
+								try out the newest VR Products. This will represent the first event actively
+								dedicated to Virtual Reality in UPC. This VR event will be placed along
+								with the startups, attracting the top computer science students to the fair. If you want
+								to participate in this awesome and unique event, check out this <a href="static/Information_VRCat_Event.pdf" download>document</a>.
+							</p>
 						</div>
 					</section>
 				</div>
@@ -67,7 +89,7 @@
                 <div class="content">
                     <ul class="actions">
                         <li>
-                        	<a target="_blank" href="mailto:info@upcstartupfair.com" class="button"> Sponsorship Opportunities Available! <a/>
+                        	<a target="_blank" href="mailto:info@upcstartupfair.com" class="button"> Sponsorship Opportunities Available! </a>
                         </li>
                     </ul>
                 </div>
